04_ecs_cluster.tf
resource "aws_ecs_cluster" "main" {
  name = "${local.app_name}-ecs-cluster"
}

resource "aws_ecs_task_definition" "app" {
  family                   = local.app_name
  network_mode             = "awsvpc"
  requires_compatibilities = ["FARGATE"]
  cpu                      = var.fargate_cpu
  memory                   = var.fargate_memory

  container_definitions = <<DEFINITION
[
  {
    "cpu": ${var.fargate_cpu},
    "image": "${var.app_image}",
    "memory": ${var.fargate_memory},
    "name": "${local.app_name}",
    "networkMode": "awsvpc",
    "portMappings": [
      {
        "containerPort": ${var.app_port},
        "hostPort": ${var.app_port}
      }
    ],
    "environment": [ ]

  }
]
DEFINITION
}

resource "aws_ecs_service" "main" {
  name            = "${local.app_name}-ecs-service"
  cluster         = aws_ecs_cluster.main.id
  task_definition = aws_ecs_task_definition.app.arn
  desired_count   = var.app_count
  launch_type     = "FARGATE"

//  network_configuration {
//    security_groups = ["${aws_security_group.ecs_tasks.id}"]
//    subnets         = ["${aws_subnet.private.*.id}"]
//  }

  network_configuration {
    security_groups = [aws_security_group.ecs_tasks.id]
    subnets         = [aws_subnet.public.0.id, aws_subnet.public.1.id]
    assign_public_ip = true
  }


  load_balancer {
    target_group_arn = aws_alb_target_group.app.id
    container_name   = local.app_name
    container_port   = var.app_port
  }

  depends_on = [
    "aws_alb_listener.front_end",
  ]
}
